# ft_gkrellm

./: CMakeLists.txt  CPU.cpp  CPU.h  Cat.cpp  Cat.h  DateTime.cpp  DateTime.h  Hostname.cpp  Hostname.h  IMonitorDisplay.h  IMonitorModule.h  Makefile  Ncurses.cpp  Ncurses.h  Network.cpp  Network.h  OSInfo.cpp  OSInfo.h  README.md  REM.cpp  REM.h  ft_gkrellm  main.cpp  main.h
